Added flask code

--- a/number_plate_localisation.ipynb
+++ b/number_plate_localisation.ipynb
@@ -66,6 +66,7 @@
       "text/plain": [
        "['car_1.jpg',\n",
        " 'car_10.jpg',\n",
+       " 'car_11.webp',\n",
        " 'car_2.jpg',\n",
        " 'car_3.jpg',\n",
        " 'car_4.jpg',\n",
@@ -199,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a8f0ee6988>"
+       "<matplotlib.image.AxesImage at 0x12bcc920e48>"
       ]
      },
      "execution_count": 12,
@@ -241,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a8f0f66f48>"
+       "<matplotlib.image.AxesImage at 0x12bcc9a4688>"
       ]
      },
      "execution_count": 14,
@@ -12589,6 +12590,13 @@
     "text = pytesseract.image_to_string(plate, lang='eng')\n",
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
